from integration/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json# ",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "nodeCount": {
            "type": "int"
        },
        "roleType": {
            "type": "string"
        },
        "clusterName": {
            "type": "string"
        },
         "vnetName": {
            "type": "string"
        },
        "vnetSubnetName": {
            "type": "string"
        },
        "vnetStartAddress": {
            "type": "string"
        },
        "vnetRGName": {
            "type": "string"
        },
        "ipOffset": {
			"type": "int"
		},
         "location": {
            "type": "string"
        }
    },
    "variables": {
    },
    "resources": [
    {
        "apiVersion": "2016-06-01",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[concat(parameters('clusterName'), '-', parameters('roleType'), '-pip', copyIndex())]",
        "location": "[parameters('location')]",
        "copy": {
            "name": "pipLoop",
            "count": "[parameters('nodeCount')]"
        },
        "properties": {
            "publicIPAllocationMethod": "Dynamic"
        }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('clusterName'), '-', parameters('roleType'), '-nsg')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
                "description": "SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
            }
          },            
          {
            "name": "WebConsoleHTTP",
            "properties": {
                "description": "Couchbase Web Console for REST/HTTP traffic.",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8091",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
            }
          },
          {
            "name": "Queries",
            "properties": {
                "description": "Access views, run queries, XDCR",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8092",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 102,
                "direction": "Inbound"
            }
          },
          {
            "name": "QueriesREST",
            "properties": {
                "description": "Query services for REST/HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8093",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 103,
                "direction": "Inbound"
            }
          },
          {
            "name": "Search",
            "properties": {
                "description": "HTTP port for the Search service",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8094",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 104,
                "direction": "Inbound"
            }
          },
          {
            "name": "SmartClient",
            "properties": {
                "description": "Smart client libraries to access data nodes using SSL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "11207",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 105,
                "direction": "Inbound"
            }
          },
          {
            "name": "SmartClientMoxi",
            "properties": {
                "description": "Smart client libraries or Moxi to directly connect to the data nodes",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "11210",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 106,
                "direction": "Inbound"
            }
          },
          {
            "name": "NonSmartClient",
            "properties": {
                "description": "Used by pre-existing Couchbase Server and memcached client libraries",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "11211",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 107,
                "direction": "Inbound"
            }
          },
          {
            "name": "WebConsoleSSL",
            "properties": {
                "description": "Web Console for REST/HTTP with SSL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "18091",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 108,
                "direction": "Inbound"
            }
          },
          {
            "name": "QueriesSSL",
            "properties": {
                "description": "Access views, run queries, XDCR with SSL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "18092",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 109,
                "direction": "Inbound"
            }
          },
          {
            "name": "N1SQLSSL",
            "properties": {
                "description": "N1QL SSL port",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "18093",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound"
            }
          }
        ]
      }
    },    
    {
        "apiVersion": "2016-06-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[concat(parameters('clusterName'), '-', parameters('roleType'), '-nic', copyIndex())]",
        "location": "[parameters('location')]",
        "copy": {
            "name": "nicLoop",
            "count": "[parameters('nodeCount')]"
        },
        "dependsOn": [
            "[concat('Microsoft.Network/publicIPAddresses/', parameters('clusterName'), '-', parameters('roleType'), '-pip', copyIndex())]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('clusterName'), '-', parameters('roleType'), '-nsg')]"
        ],        
        "properties": {
            "networkSecurityGroup": {
                "id": "[concat(resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('clusterName'), '-', parameters('roleType'), '-nsg')))]"
            },            
            "ipConfigurations": [
            {
                "name": "ipconfig1",
                "properties": {
                    "privateIPAllocationMethod": "Dynamic",
                    "subnet": {
                        "id": "[concat(resourceId(parameters('vnetRGName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName')), '/subnets/', parameters('vnetSubnetName'))]"
                    },
                    "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('clusterName'), '-', parameters('roleType'), '-pip', copyIndex()))]"
                    } 
                }
            }
          ]
        }
    }
    ]
}
